fix img too wide

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3329,6 +3329,13 @@ svg {
   height: auto;
 }
 
+img,
+canvas,
+iframe,
+video {
+    max-width: 100%;
+}
+
 /*------------------ clear ------------------------------*/
 
 .clear {
